<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.tu4nfpt.activitylifecycle_session3.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_ActivityA"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activityA"
            />
        <TextView
            android:id="@+id/txt_onCreate"
            android:layout_below="@+id/txt_ActivityA"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oncreate_0"
            />
        <TextView
            android:id="@+id/txt_onStart"
            android:layout_below="@+id/txt_onCreate"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onstart_0"
            />
        <TextView
            android:id="@+id/txt_onRestart"
            android:layout_below="@+id/txt_onStart"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onrestart_0"
            />
        <TextView
            android:id="@+id/txt_onResume"
            android:layout_below="@+id/txt_onRestart"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onresume_0"
            />
        <TextView
            android:id="@+id/txt_onPause"
            android:layout_below="@+id/txt_onResume"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onpause_0"
            />
        <TextView
            android:id="@+id/txt_onStop"
            android:layout_below="@+id/txt_onPause"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/onstop_0"
            />
        <TextView
            android:id="@+id/txt_onDestroy"
            android:layout_below="@+id/txt_onStop"
            android:layout_marginTop="15dp"
            android:layout_centerHorizontal="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ondestoy_0"
            />
        <Button
            android:id="@+id/btn_GoToActiB"
            android:layout_below="@id/txt_onDestroy"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true"
            android:text="@string/go_to_activity_b"
            android:textAllCaps="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>

</ScrollView>
